feat: API completa de customers
