# src/routes/customer.routes.ts
@@ -1,0 +1,12 @@
+import { Router } from "express";
+import { getCustomers, getCustomer, createCustomer, updateCustomer } from "../controllers/customer.controller.js";
+import { validateCustomer } from "../middlewares/validate.customer.js";
+
+const router = Router();
+
+router.get("/customers", getCustomers);
+router.get("/customers/:id", getCustomer);
+router.post("/customers", validateCustomer, createCustomer);
+router.put("/customers/:id", updateCustomer);
+
+export default router;
